added a bit of form css

--- a/profiles/kendra_signpost/themes/kendra_tao/style.css
+++ b/profiles/kendra_signpost/themes/kendra_tao/style.css
@@ -18,3 +18,72 @@
   color: #666;
   font-size: 0.8em;
 }
+
+
+#console .limiter div { 
+  background: #fff;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px; 
+  margin: 10px 0;
+  padding: 5px 10px;
+}
+#console .messages.status { 
+  color:#687;
+  background:#ecf8f4;
+  border: 2px solid #f8fffc;
+}
+#console .messages.error { 
+  color:#965;
+  background:#ffe4e0;
+  border: 2px solid #fff8f4;
+}
+#console .messages.warning { 
+  color:#a84;
+  background:#fff4c0;
+  border: 2px solid #fffce4;
+}
+
+input.form-submit { 
+  border: 1px solid #fff;
+  padding: 1px 5px 2px;
+  background: #F4F4F4 url(images/bleeds.png) repeat-x 0px -41px;
+  border-color: #DDD #DDD #CCC;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px; 
+  -webkit-box-shadow: #DDD 0px 1px 1px;
+  box-shadow: #DDD 0px 1px 1px;
+  -moz-box-shadow: #DDD 0px 1px 1px;
+}
+
+input.form-submit:hover {
+  background: #eee;
+}
+.form-item {
+  margin-bottom:10px;
+}
+.filefield-element {
+  margin:0;
+}
+#content ul { list-style: circle; margin-left: 10px; }
+#content ol { list-style: decimal; margin-left: 10px; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
