--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -14,7 +14,7 @@
 	z-index: 1000;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
-	max-height: 200px;
+	max-height: 10em;
 	overflow:auto;
 	background-color: #eeeeee;
 }
