--- a/profiles/kendra_signpost/modules/contrib/token/token.css
+++ b/profiles/kendra_signpost/modules/contrib/token/token.css
@@ -1,11 +1,10 @@
-/* $Id: token.css,v 1.2.2.3 2010/09/06 14:55:43 davereid Exp $ */
+/* $Id: token.css,v 1.2.2.2 2010/03/26 00:03:19 davereid Exp $ */
 
-.token-tree {
+table.token-tree {
   font-size: 0.85em;
-  margin-left: 19px;
 }
 
-.token-tree td, .token-tree th {
+table.token-tree td, table.token-tree th {
   padding-top: 0;
   padding-bottom: 0;
 }
