fixed floating log div

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -9,7 +9,7 @@
 	bottom: 1em;
 	left: 1em;
 	padding: 1em;
-	position: absolute;
+	position: fixed;
 	width: 400px;
 	z-index: 1000;
 	-webkit-border-radius: 10px;
