added screen logging of data params

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -22,3 +22,9 @@
 #search-log .row {
 	border-top: 1px dotted #cccccc;
 }
+#search-log .row a.toggle {
+}
+#search-log .row pre {
+	white-space:pre-wrap;
+	display:none;
+}
