portable filter formalities

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -40,3 +40,7 @@
 	border: 1px solid orange;
 	padding: 1em;
 }
+
+#kendra-query-builder input, #kendra-query-builder select {
+	margin-right: 1em;
+}
