added basic field dragging capability

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -38,9 +38,12 @@
 
 #kendra-query-builder {
 	border: 1px solid orange;
-	padding: 1em;
 }
 
-#kendra-query-builder input, #kendra-query-builder select {
+#kendra-query-builder table {
+	margin: 1em;
+}
+
+#kendra-query-builder input,#kendra-query-builder select {
 	margin-right: 1em;
 }
