add space at the bottom to fit the tall log window

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -96,3 +96,10 @@
 #kendra-query-builder .kendra-filter-button-wrapper a.disabled {
 	color: #cccccc;
 }
+
+/**
+* add space at the bottom to fit the tall log window
+*/
+body.admin-menu {
+	padding-bottom:11em;
+}
