--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -53,12 +53,14 @@
 #kendra-query-builder {
 	background-color: #EEEEEE;
 	border: 1px solid #CCCCCC;
+	padding:1em;
 }
-
+/*
 #kendra-query-builder table,#kendra-query-builder h3,#kendra-query-builder>*
 	{
 	margin: 1em;
 }
+*/
 
 #kendra-query-builder table tr.draggable {
 	height: 2em;
@@ -100,6 +102,6 @@
 /**
 * add space at the bottom to fit the tall log window
 */
-body.admin-menu {
+body.big-bottom {
 	padding-bottom:11em;
 }
