search activity on view & edit pages

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -118,6 +118,9 @@
 
 #kendra-search-pager li {
 	float: left;
+	list-style-type: none;
+	margin: 0;
+	padding-right: 1em;
 }
 
 #kendra-search-pager-header {
