--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -60,7 +60,7 @@
 	height: 2em;
 }
 
-#kendra-query-builder table tr.draggable > td {
+#kendra-query-builder table tr.draggable>td {
 	vertical-align: middle;
 }
 
@@ -139,4 +139,12 @@
 */
 body.big-bottom {
 	padding-bottom: 11em;
+}
+
+/**
+* date picker
+*/
+#ui-datepicker-div {
+	background-color: #FFFFFF;
+	z-index: 1000;
 }
