fixed datepicker css

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -167,7 +167,7 @@ body.big-bottom {
 	right: 3px;
 	top: 3px;
 }
-
+/*
 .ui-datepicker-div,#ui-datepicker-div,.ui-datepicker-inline {
 	background: none repeat scroll 0 0 #FFFFFF;
 	border-width: 3px;
@@ -177,3 +177,4 @@ body.big-bottom {
 font-weight:400;
 display:none;
 }
+*/
