--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -160,10 +160,11 @@ body.big-bottom {
 	background-color: #FFFFFF;
 	z-index: 1000;
 }
-
+/*
 #ui-datepicker-div table td,#ui-datepicker-div table th {
 	padding: 0;
 }
+*/
 
 #ui-datepicker-div .ui-datepicker-header {
 	font-size: 0.8em;
