adjust width of main content on smart filter editor page

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -106,6 +106,12 @@
 	white-space: pre-wrap;
 	word-wrap: break-word;
 }
+.node-type-smart-filter .column-main {
+    width: 90%;
+}
+.node-type-smart-filter .column-side {
+    width: 10%;
+}
 
 .column-side .view-source {
 	margin: 1em 0;
