fix float bug for multiple search results

--- a/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
+++ b/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css
@@ -136,7 +136,9 @@
 }
 
 #kendra-search-docs>div {
-	margin-bottom: 1em;
+    clear: left;
+    float: none;
+    margin-bottom: 3em;
 }
 
 #kendra-search-docs dl dt {
