indent and number front page list items

--- a/profiles/kendra_signpost/themes/kendra_tao/style.css
+++ b/profiles/kendra_signpost/themes/kendra_tao/style.css
@@ -1,3 +1,8 @@
+body.front #content ol {
+	list-style-type: decimal;
+	padding-left: 3em;
+}
+
 #left {
 	width: 200px;
 	float: left;
@@ -105,6 +110,7 @@ table.sparql td {
 	font-size: 0.9em;
 	padding: 4px;
 }
+
 /*
 div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
 	padding: 1em 2em !important;
@@ -115,8 +121,9 @@ ul.vertical-tabs-list {
 }
 */
 div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
-	padding:0 !important;
+	padding: 0 !important;
 }
+
 ul.links li a {
 	margin-right: 1em;
 }
